Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,22 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['David Crane', 'Marta Kauffman']"
+       "'David Crane'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "friends['creators']"
+    "david"
    ]
   },
   {
