Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        " 'creators': ['David Crane', 'Marta Kauffman']}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        " 'no_of_episodes': 180}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "  'no_of_episodes': 180}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,19 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tv_shows' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-252bd35fffe4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtv_shows\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'tv_shows' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'name': 'Seinfeld',\n",
+       " 'creators': ['Larry David', 'Jerry Seinfeld'],\n",
+       " 'genre': 'sitcom',\n",
+       " 'no_of_seasons': 10,\n",
+       " 'no_of_episodes': 180}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -576,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +588,7 @@
        "['Larry David', 'Jerry Seinfeld']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
