--- a/index.ipynb
+++ b/index.ipynb
@@ -546,26 +546,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Seinfeld',\n",
-       " 'creators': ['Larry David', 'Jerry Seinfeld'],\n",
+       "{'name': 'Friends',\n",
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
-       " 'no_of_episodes': 180}"
+       " 'no_of_episodes': 236,\n",
+       " 'creators': ['David Crane', 'Marta Kauffman']}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tv_shows[1]"
+    "tv_shows[0]"
    ]
   },
   {
